fixed spacing

--- a/src/components/Aboutus/style.css
+++ b/src/components/Aboutus/style.css
@@ -1,7 +1,7 @@
 .aboutus {
   display: flex;
   /* flex-direction: column; */
-  margin: 0 10rem 3rem 10rem;
+  margin: 0 7rem 5rem 7rem;
   /* padding: 1rem; */
   justify-content: center;
 }
