--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,10 +1,11 @@
 .footer {
-  background-color: #efefef;
+  margin: 0 0 3rem 0;
+  /* background-color: #efefef; */
   /* background: linear-gradient(
     rgba(255, 255, 255, 0.6),
     rgba(255, 255, 255, 0.6)
   ); */
-  height: 8rem;
+  /* height: 5rem; */
   width: 100%;
   /* margin-bottom: 3rem; */
   /* margin: 0 0 3rem 0; */
