--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   /* margin: 3rem 8rem 0 8rem; */
-  margin: 0 10rem 3rem 10rem;
+  margin: 0 7rem 5rem 7rem;
   /* padding: 1rem; */
   /* padding-bottom: rem; */
   /* padding: 1rem; */
@@ -15,12 +15,12 @@
 }
 
 .search-input {
-  width: 700px;
-  height: 50px;
+  width: 500px;
+  height: 40px;
   padding: 0px 24px;
   background-color: white;
   transition: transform 250ms ease-in-out;
-  font-size: 16px;
+  font-size: 14px;
   /* line-height: 20px; */
   color: #575756;
   /* background-color: transparent; */
@@ -73,7 +73,7 @@
 
 .skewBtn {
   width: 140px;
-  height: 50px;
+  height: 40px;
   outline: none;
   cursor: pointer;
   background: none;
