--- a/src/components/OfferSection/style.css
+++ b/src/components/OfferSection/style.css
@@ -1,7 +1,7 @@
 .offer-section {
   display: flex;
   flex-direction: column;
-  margin: 0 10rem 3rem 10rem;
+  margin: 0 7rem 5rem 7rem;
 }
 
 .offer-header {
