--- a/src/components/Section1/style.css
+++ b/src/components/Section1/style.css
@@ -3,7 +3,7 @@
   /* margin-top: 1rem; */
   /* padding-top: 1rem; */
   /* width: 100%; */
-  margin: 0rem 10rem 3rem 10rem;
+  margin: 0rem 7rem 5rem 7rem;
   /* padding: 1rem; */
   justify-content: space-between;
 }
